--- a/task-4.html
+++ b/task-4.html
@@ -6,20 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
-        Email
-        <input type="email" name="email" />
+      <label class="form-lab">
+        <span class="form-sp">Email</span>
+        <br>
+        <input type="email" name="email" class="form-input" />
       </label>
       <label>
-        Password
-        <input type="password" name="password" />
+        <span class = "form-sp">Password</span>
+        <br>
+        <input type="password" name="password" class="form-input" />
       </label>
-      <button type="submit">Login</button>
+      <button type="submit" class="form-btn">Log in</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
